@@ -1,5 +1,9 @@
 2007-04-15 Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/ipython_view.py: Fixed copy/past bug (#425627).
+	
+2007-04-15 Eitan Isaacson  <eitan@ascender.com>
+
 	* NEWS:
 	* README: Updated for upcoming release.
 
